--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -14,6 +15,7 @@
     "react-slick": "^0.29.0",
     "react-time-format": "0.0.5",
     "react-toggle-dark-mode": "^1.0.4",
+    "sass": "^1.52.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
