--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "axios": "^0.27.2",
     "jquery": "^3.6.0",
     "react": "^18.1.0",
+    "react-awesome-loaders": "^0.1.37",
     "react-dom": "^18.1.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-time-format": "0.0.5",
     "react-toggle-dark-mode": "^1.0.4",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.52.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
