--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.2.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,6 @@
     "react": "^18.1.0",
     "react-awesome-loaders": "^0.1.37",
     "react-dom": "^18.1.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -19,7 +19,7 @@
     "react-time-format": "0.0.5",
     "react-toggle-dark-mode": "^1.0.4",
     "reactjs-popup": "^2.0.5",
-    "sass": "^1.52.2",
+    "sass": "^1.52.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
