--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-awesome-loaders": "^0.1.37",
+    "react-chrono": "^1.17.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-time-format": "0.0.5",
+    "react-toastify": "^9.0.5",
     "react-toggle-dark-mode": "^1.0.4",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.52.3",
