--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.1.0",
     "react-awesome-loaders": "^0.1.37",
     "react-chrono": "^1.17.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^9.3.3",
